--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,38 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transition: all 0.05s;
     }
 
   </style>
 
   <script>
+  
+  const hoursHand = document.querySelector('.hour-hand');
+  const minutesHand = document.querySelector('.min-hand');
+  const secondsHand = document.querySelector('.second-hand');
 
+  function updateClock() {
+    let currentTime = new Date();
+
+    const seconds = currentTime.getSeconds();
+    const secondsDegrees = ((seconds / 60) * 360) + 90;
+    secondsHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+    const mins = currentTime.getMinutes();
+    const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
+    minutesHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+    const hour = currentTime.getHours();
+    const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
+    hoursHand.style.transform = `rotate(${hourDegrees}deg)`;
+
+    // call this function again in 1000ms
+    setTimeout(updateClock, 1000);
+  }
+
+  updateClock(); // initial call
 
   </script>
 </body>
