--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,28 +37,57 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter(inventor => (inventor.year>=1500 && inventor.year<1600));
+    console.log(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const inventorsNames = inventors.map(inventor => inventor.first + " " + inventor.last);
+    console.log(inventorsNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const inventorsByDate = inventors.sort((inventorA, inventorB) => inventorA.year>inventorB.year? 1:-1);
+    console.log(inventorsByDate);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalYears = inventors.map(inventor => inventor.passed - inventor.year)
+    .reduce((inventorAgeA, inventorAgeB) => inventorAgeA + inventorAgeB);
+    console.log(totalYears);
 
     // 5. Sort the inventors by years lived
+    const invetorsByAge = inventors.sort((a, b) => (a.passed - a.year)<(b.passed - b.year) ? 1 : -1);
+    console.log(invetorsByAge);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    //const boulevards = Array.from(document.querySelectorAll('.mw-category-group a'));
+    //const filteredBoulevards = boulevards.filter(boulevard => boulevard.title.includes('de')).map(boulevard => boulevard.title);
+    //console.log(filteredBoulevards);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const inventorsByLastName = inventors.sort((inventorA, inventorB) => inventorA.last>inventorB.last? 1:-1);
+    console.log(inventorsByLastName);
+
+    const peopleByLastName = people.sort((personA, personB) => {
+      const lastNameA = personA.split(', ')[0];
+      const lastNameB = personB.split(', ')[0];
+      return lastNameA > lastNameB ? 1 : -1;
+    });
+    console.log(peopleByLastName);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const reducedData = data.reduce((obj, item) => {
+      obj[item] = (obj[item] || 0) + 1;
+      return obj;
+    }, {});
+
+    console.log(reducedData);
 
   </script>
 </body>
